# mp2-practice

./: .gitignore  CMakeLists.txt  Laba4.sln  README.md  d.txt  report_01_lab.docx  report_template.docx
ChizhovMA/04_lab/: CMakeLists.txt
ChizhovMA/04_lab/doc/: .~lock.report_template_04_lab.docx#  report_template.docx  report_template_04_lab.docx
ChizhovMA/04_lab/samples/: CMakeLists.txt  sample_polynom.cpp
ChizhovMA/04_lab/tests/: CMakeLists.txt  test_list.cpp  test_node.cpp  test_ringlist.cpp  test_stack_functions.cpp  tests_monom.cpp  tests_polynom.cpp
ChizhovMA/05_lab/: CMakeLists.txt
ChizhovMA/05_lab/doc/: report_05_lab.docx
ChizhovMA/05_lab/samples/: CMakeLists.txt  sample_tables.cpp
ChizhovMA/05_lab/tests/: CMakeLists.txt  test_ringlist.cpp  test_scantable.cpp  tests_hash.cpp  tests_polynom.cpp  tests_sortedtable.cpp
EreminAN/01_lab_polynoms/Monom/: CMakeLists.txt  Monom.h
ErmolaevDA/02_lab_tables_qt/: CMakeLists.txt  choose.cpp  choose.h  choose.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ErmolaevDA/02_lab_tables_qt/include/: HashTable.h  SortTable.h  Table.h  monom.h
ErmolaevDA/02_lab_tables_qt/sample/: main.cpp
ErmolaevDA/02_lab_tables_qt/src/: polinom.cpp
ErmolaevDA/03_lab_trees/src/: CMakeLists.txt  monom.cpp  polinom.cpp
FrolovaEA/05_lab/: CMakeLists.txt
FrolovaEA/05_lab/samples/: sample_debug.cpp  sample_table.cpp  sample_tlist.cpp  sample_tmonom.cpp  sample_tpolynom.cpp  sample_tringlist.cpp
FrolovaEA/05_lab/tests/: test_arrayhashtable.cpp  test_hashtable.cpp  test_scantable.cpp  test_sortedtable.cpp  test_table.cpp  test_tabrecord.cpp
KholinKI/05_lab/tests/: CMakeLists.txt  test.TList.cpp  test_TArrayHashTable.cpp  test_TArrayScanTable.cpp  test_TArraySortTable.cpp  test_TMonom.cpp  test_TNode.cpp  test_TRingList.cpp  test_tpolynoms.cpp
KorobeinikovAP/05_lab/: CMakeLists.txt
KorobeinikovAP/05_lab/docx/: Report_05_lab.docx
KorobeinikovAP/05_lab/samples/: CMakeLists.txt  sample_table.cpp
KorobeinikovAP/05_lab/tests/: CMakeLists.txt  test_tpolynom.cpp  test_tringlist.cpp  test_tstack.cpp  tests_hash_table.cpp  tests_scan_table.cpp  tests_sorted_table.cpp  tests_table.cpp  tests_tabrecord.cpp  tests_tmonom.cpp
KurasbedianiGK/01_lab_polynoms/: CMakeLists.txt
KurasbedianiGK/01_lab_polynoms/gtest/: gtest-all.cc
KurasbedianiGK/01_lab_polynoms/include/: node.h  power.h
KurasbedianiGK/01_lab_polynoms/samples/: main_polinom.cpp
KurasbedianiGK/01_lab_polynoms/src/: monom.cpp  power.cpp
KurasbedianiGK/01_lab_polynoms/test/: test_monom.cpp  test_polynom.cpp  test_power.cpp
PlekhanovMA/02_lab_tables/tests/: CMakeLists.txt  list_tests.cpp  polinoms_tests.cpp  table_tests.cpp  test_main.cpp
RezantsevaAA/04_lab/lib_polynoms/: CMakeLists.txt
SavchenkoMP/: 04_lab_ver.2024.04.12.txt  05_lab_ver.2024.04.12.txt  05_lab_ver.2024.04.15.txt  CMakeLists.txt
SavchenkoMP/01_lab/doc/: 01_lab_report.docx
SavchenkoMP/01_lab/include/: tbitfield.h  tset.h
SavchenkoMP/01_lab/samples/: sample_primenumbers.cpp  sample_tbitfield.cpp  sample_tset.cpp
SavchenkoMP/01_lab/src/: tbitfield.cpp  tset.cpp
SavchenkoMP/02_lab/doc/: 02_lab_report.docx  report_template.docx
SavchenkoMP/02_lab/include/: tmatrix.h  tvector.h
SavchenkoMP/02_lab/samples/: sample_tmatrix.cpp  sample_tvector.cpp
SavchenkoMP/02_lab/tests/: test_tmatrix.cpp  test_tvector.cpp
SavchenkoMP/03_lab/: CMakeLists.txt
SavchenkoMP/03_lab/doc/: 03_lab_report.docx  report.docx
SavchenkoMP/03_lab/include/: tarithmeticexpression.h  tarithmeticexpression_str.h  tstack.h
SavchenkoMP/03_lab/samples/: debug.cpp  sample_prefix.cpp  sample_tstack.cpp
SavchenkoMP/03_lab/src/: tarithmeticexpression.cpp  tarithmeticexpression_str.cpp
SavchenkoMP/03_lab/tests/: test_tarithmeticexpression.cpp  test_tstack.cpp
SavchenkoMP/04_lab/: 04_lab_ver.2024.04.22.txt  CMakeLists.txt
SavchenkoMP/04_lab/doc/: 04_lab_report.docx
SavchenkoMP/04_lab/include/: tdata.h  tlist.h  tmonom.h  tnode.h  tpolynom.h  tringlist.h
SavchenkoMP/04_lab/samples/: CMakeLists.txt  sample_debug.cpp  sample_tlist.cpp  sample_tnode.cpp  sample_tpolynom.cpp  sample_tringlist.cpp
SavchenkoMP/04_lab/src/: tmonom.cpp
SavchenkoMP/04_lab/tests/: CMakeLists.txt  test_polynom.cpp  test_tarithmeticexpression.cpp  test_tlist.cpp  test_tmonom.cpp  test_tringlist.cpp  test_tstack.cpp
SavchenkoMP/05_lab/: 05_lab_ver.2024.04.15-1.txt  CMakeLists.txt  TT.txt
SavchenkoMP/05_lab/doc/: 05_lab_report.docx
SavchenkoMP/05_lab/samples/: CMakeLists.txt  sample_debug.cpp  sample_table.cpp  sample_tpolynom.cpp  sample_tringlist.cpp
SavchenkoMP/05_lab/tests/: CMakeLists.txt  test_arrayhashtable.cpp  test_hashtable.cpp  test_polynom.cpp  test_scantable.cpp  test_sortedtable.cpp  test_tablelib.cpp  test_tabrecord.cpp  test_tlist.cpp  test_tnode.cpp  test_tringlist.cpp
SavchenkoMP/lib_lists/include/: tnode.h
SavchenkoMP/lib_polynoms/include/: tpolynom.h
SavchenkoMP/lib_sortings/src/: sortings.cpp
SavchenkoMP/lib_tables/include/: arrayhashtable.h  hashtable.h  scantable.h  sortedtable.h  table.h  tableslib.h  tabrecord.h
SavchenkoMP/lib_tables/src/: CMakeLists.txt  arrayhashtable.cpp  scantable.cpp  sortedtable.cpp  tabrecord.cpp
SavchenkoMP/samples/: CMakeLists.txt  sample_debug.cpp
SavchenkoMP/samples/examples_DELETE/: sample_tmatrix.cpp  sample_tvector.cpp
SavchenkoMP/tests/: CMakeLists.txt  test_arrayhashtable.cpp  test_scantable.cpp  test_sortedtable.cpp  test_table.cpp  test_tabrecord.cpp  test_tnode.cpp
ShpynovNA/04_lab/: CMakeLists.txt  report.docx
ShpynovNA/04_lab/samples/: CMakeLists.txt  sample_polynom.cpp  sample_tlist.cpp
ShpynovNA/04_lab/tests/: CMakeLists.txt  test_polynom.cpp  test_tlist.cpp
SokolovaMV/01_lab_polynoms/src/: CMakeLists.txt  List.cpp  Monom.cpp  Polinom.cpp
SuvorovDI/05_lab/: CMakeLists.txt
SuvorovDI/05_lab/doc/: laboratory_work_report.docx
SuvorovDI/05_lab/samples/: CMakeLists.txt  sample.cpp
SuvorovDI/05_lab/tests/: CMakeLists.txt  test_array_hash_table.cpp  (+2 more)
VinogradovAS/02_lab_table_polymons/: CMakeLists.txt
ZorinOA/03_lab_trees/: CMakeLists.txt
(+3065 files in other folders)
