cmake_minimum_required(VERSION 3.7)


set(PROJECT_NAME Polynom)
project(${PROJECT_NAME})

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE})

set(MP2_LISTS_LIBRARY "${PROJECT_NAME}_lists")
set(MP2_POLYNOM_LIBRARY  "${PROJECT_NAME}_polynom")
set(MP2_STACK_LIBRARY "${PROJECT_NAME}_stack")
set(MP2_TESTS   "tests_${PROJECT_NAME}")
set(MP2_LISTS_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/lib_ringlist/include")
set(MP2_POLYNOM_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/lib_polynom/include")
set(MP2_STACK_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/lib_stack/include")

# BUILD
add_subdirectory(samples)
add_subdirectory(gtest)
add_subdirectory(tests)
add_subdirectory(lib_ringlist/src)
add_subdirectory(lib_polynom/src)
add_subdirectory(lib_stack/src)

# REPORT
message( STATUS "")
message( STATUS "General configuration for ${PROJECT_NAME}")
message( STATUS "======================================")
message( STATUS "")
message( STATUS "   Configuration: ${CMAKE_BUILD_TYPE}")
message( STATUS "   ----------------------------------------------")
message( STATUS "   Library names")
message( STATUS "   MP2_LISTS_LIBRARY:      ${MP2_LISTS_LIBRARY}")
message( STATUS "   MP2_POLYNOM_LIBRARY:   ${MP2_POLYNOM_LIBRARY}")
message( STATUS "   MP2_STACK_LIBRARY: ${MP2_STACK_LIBRARY}")
message( STATUS "   ----------------------------------------------")
message( STATUS "   Test project name")
message( STATUS "   MP2_TESTS:              ${MP2_TESTS}")
message( STATUS "   ----------------------------------------------")
message( STATUS "   Include directories")
message( STATUS "   MP2_LISTS_INCLUDE:      ${MP2_LISTS_INCLUDE}")
message( STATUS "   MP2_POLYNOM_INCLUDE:   ${MP2_POLYNOM_INCLUDE}")
message( STATUS "   MP2_STACK_INCLUDE: ${MP2_STACK_INCLUDE}")
message( STATUS "=================================================")
message( STATUS "")
